welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value getMondeHateur
  var hauteurMonde:Int = getMondeHateur()
                         ^Array1:6: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var couleurs = Array[Color](hauteurMonde)
                              ^